--- a/Project/CSS/style.css
+++ b/Project/CSS/style.css
@@ -1,6 +1,7 @@
 body {
 	background-color: black;
     color:white;
+	font-family: 'Kosugi Maru', sans-serif;
 }
 #header {
 	background-color: #BF0C2B;
@@ -16,5 +17,13 @@ body {
 	color: white;
     font-size: 30px;
     margin: 20px;
-    font-family: 'Kosugi Maru', sans-serif;
+}
+#footer {
+	background-color: #BF0C2B;
+	text-align: center;
+	font-size: 20px;
+	padding: 30px;
+	position: fixed;
+	bottom: 0;
+	width: 100%;
 }
