--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -5,25 +5,36 @@ body {
 }
 #header {
 	background-color: #BF0C2B;
-    padding: 20px;
+    padding-top: 20px;
+	padding-bottom: 20px;
+	position: fixed;
+	width: 100%;
+}
+#name {
+	
 }
 #header div {
-	display: inline;
 	position: absolute;
-	right: 20px;
+	right: 0px;
 }
 #header a {
 	text-decoration: none;
 	color: white;
     font-size: 30px;
-    margin: 20px;
+	float: left;
+	margin-left: 20px;
+	margin-right: 20px;
+}
+#banner img {
+	
 }
 #footer {
 	background-color: #BF0C2B;
 	text-align: center;
 	font-size: 20px;
-	padding: 30px;
-	position: fixed;
-	bottom: 0;
+	padding-top: 30px;
+	padding-bottom: 30px;
+	/*position: fixed;
+	bottom: 0;*/
 	width: 100%;
 }
