--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -1,17 +1,18 @@
+html {
+	scroll-behavior: smooth;
+}
 body {
-	background-color: black;
+	background-color: #111111;
     color:white;
 	font-family: 'Kosugi Maru', sans-serif;
 }
 #header {
-	background-color: #BF0C2B;
-    padding-top: 20px;
-	padding-bottom: 20px;
 	position: fixed;
+	background-color: #BF0C2B;
+    padding: 20px;
 	width: 100%;
-}
-#name {
-	
+	box-sizing: border-box;
+	z-index: 1;
 }
 #header div {
 	position: absolute;
@@ -25,8 +26,54 @@ body {
 	margin-left: 20px;
 	margin-right: 20px;
 }
+.header-button {
+	position: relative;
+}
+.header-button:before {
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 2px;
+	bottom: -2px;
+	left: 0;
+	background-color: white;
+	visibility: hidden;
+	transform: scaleX(0);
+	-webkit-transform: scaleX(0);
+	transition: 0.3s ease-in-out;
+	-webkit-transition: 0.3s ease-in-out;
+}
+.header-button:hover:before {
+	visibility: visible;
+	transform: scaleX(1);
+	-webkit-transform: scaleX(1);
+}
+#banner {
+	position: relative;
+	width: 100%;
+	height: 100vh;
+	overflow: hidden;
+}
 #banner img {
-	width: 100%
+	position: absolute;
+	opacity: 0.5;
+}
+#banner p {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
+	text-align: center;
+	font-size: 50px;
+	text-shadow: 2px 2px 2px black;
+	font-weight: 900;
+	color: #eeeeee;
+}
+@media only screen and (min-width: 1920px) {
+	#banner img {
+		width: 100%;
+	}
 }
 #footer {
 	background-color: #BF0C2B;
@@ -34,7 +81,5 @@ body {
 	font-size: 20px;
 	padding-top: 30px;
 	padding-bottom: 30px;
-	/*position: fixed;
-	bottom: 0;*/
 	width: 100%;
 }
