--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -14,9 +14,23 @@ body {
 	box-sizing: border-box;
 	z-index: 1;
 }
-#header div {
-	position: absolute;
-	right: 0px;
+#hamburger {
+	float: right;
+}
+#hamburger div {
+	
+}
+#hamburger-middle {
+	
+}
+#menu {
+	display: none;
+	float: right;
+}
+@media only screen and (min-width: 850px) {
+	#menu {
+		display: block;
+	}
 }
 #header a {
 	text-decoration: none;
@@ -55,25 +69,24 @@ body {
 	overflow: hidden;
 }
 #banner img {
-	position: absolute;
 	opacity: 0.5;
-}
-#banner p {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	-webkit-transform: translate(-50%, -50%);
-	text-align: center;
-	font-size: 50px;
-	text-shadow: 2px 2px 2px black;
-	font-weight: 900;
-	color: #eeeeee;
 }
 @media only screen and (min-width: 1920px) {
 	#banner img {
 		width: 100%;
 	}
+}
+#banner p {
+	position: absolute;
+	top: 50%;
+	width: 100%;
+	transform: translate(0, -50%);
+	-webkit-transform: translate(0, -50%);
+	text-align: center;
+	font-size: 50px;
+	text-shadow: 2px 2px 2px black;
+	font-weight: 900;
+	color: #eeeeee;
 }
 #footer {
 	background-color: #BF0C2B;
