--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -14,20 +14,27 @@ body {
 	box-sizing: border-box;
 	z-index: 1;
 }
-#hamburger {
+#hamburger-button {
 	float: right;
+	padding: 3px;
 }
-#hamburger div {
-	
+#hamburger-button div {
+	width: 30px;
+	height: 4px;
+	background-color: white;
+	border-radius: 5px;
 }
 #hamburger-middle {
-	
+	margin: 6px 0;
 }
 #menu {
 	display: none;
 	float: right;
 }
 @media only screen and (min-width: 850px) {
+	#hamburger-button {
+		display: none;
+	}
 	#menu {
 		display: block;
 	}
@@ -37,8 +44,7 @@ body {
 	color: white;
     font-size: 30px;
 	float: left;
-	margin-left: 20px;
-	margin-right: 20px;
+	margin: 0 20px;
 }
 .header-button {
 	position: relative;
