--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -66,6 +66,7 @@ body {
 	-webkit-transform: translate(-50%, -50%);
 	text-align: center;
 	font-size: 50px;
+    font-family: 'Anton', sans-serif;
 	text-shadow: 2px 2px 2px black;
 	font-weight: 900;
 	color: #eeeeee;
