--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -23,6 +23,7 @@ body {
 #hamburger-button {
 	float: right;
 	padding: 3px;
+	margin: 1px 0px;
 }
 #hamburger-button div {
 	width: 30px;
@@ -31,7 +32,7 @@ body {
 	border-radius: 5px;
 }
 #hamburger-middle {
-	margin: 6px 0;
+	margin: 5px 0;
 }
 #x-button {
 	position: relative;
@@ -117,6 +118,7 @@ body {
 	overflow: hidden;
 }
 #banner img {
+	position: absolute;
 	opacity: 0.5;
 }
 @media only screen and (min-width: 1920px) {
@@ -129,7 +131,7 @@ body {
 		height: 100%;
 	}
 }
-#banner p {
+#banner h1 {
 	position: absolute;
 	top: 50%;
 	width: 100%;
