--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -138,11 +138,16 @@ body {
 	transform: translate(0, -50%);
 	-webkit-transform: translate(0, -50%);
 	text-align: center;
-	font-size: 50px;
+	font-size: 40px;
     font-family: 'Anton', sans-serif;
 	text-shadow: 2px 2px 2px black;
 	font-weight: 900;
 	color: #eeeeee;
+}
+@media only screen and (min-width: 1000px) {
+	#banner h1 {
+		font-size: 50px;
+	}
 }
 #footer {
 	background-color: #BF0C2B;
