--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -120,6 +120,9 @@ body {
 #banner img {
 	position: absolute;
 	opacity: 0.5;
+	top: 50%;
+	left: 10%;
+	transform: translate(-10%, -50%);
 }
 @media only screen and (min-width: 1920px) {
 	#banner img {
