--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -44,9 +44,11 @@ body {
 }
 #line-1 {
 	transform: rotate(-45deg) translate(-5px, 7px);
+	-webkit-transform: rotate(-45deg) translate(-5px, 7px);
 }
 #line-2 {
 	transform: rotate(45deg) translate(5px, 2px);
+	-webkit-transform: rotate(45deg) translate(5px, 2px);
 }
 #x-button div {
 	width: 30px;
@@ -76,18 +78,8 @@ body {
 	border-bottom: solid 1px #444444;
 	text-align: center;
 }
-@media only screen and (min-width: 850px) {
-	#hamburger-button {
-		display: none;
-	}
-	#header-menu {
-		display: block;
-	}
-	.header-button:hover:before {
-		visibility: visible;
-		transform: scaleX(1);
-		-webkit-transform: scaleX(1);
-	}
+#hamburger-button:target ~ #header-menu > .header-button:active {
+	background-color: #333333;
 }
 .header-button {
 	position: relative;
@@ -96,6 +88,7 @@ body {
     font-size: 30px;
 	float: left;
 	margin: 0 0px;
+	transition: 0.3s;
 }
 .header-button:before {
 	content: "";
@@ -111,6 +104,19 @@ body {
 	transition: 0.3s ease-in-out;
 	-webkit-transition: 0.3s ease-in-out;
 }
+@media only screen and (min-width: 850px) {
+	#hamburger-button {
+		display: none;
+	}
+	#header-menu {
+		display: block;
+	}
+	.header-button:hover:before {
+		visibility: visible;
+		transform: scaleX(1);
+		-webkit-transform: scaleX(1);
+	}
+}
 #banner {
 	position: relative;
 	width: 100%;
@@ -123,6 +129,7 @@ body {
 	top: 50%;
 	left: 10%;
 	transform: translate(-10%, -50%);
+	-webkit-transform: translate(-10%, -50%);
 }
 @media only screen and (min-width: 1920px) {
 	#banner img {
@@ -138,18 +145,22 @@ body {
 	position: absolute;
 	top: 50%;
 	width: 100%;
-	transform: translate(0, -50%);
-	-webkit-transform: translate(0, -50%);
+	transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
 	text-align: center;
-	font-size: 40px;
-    font-family: 'Anton', sans-serif;
+    font-family: 'Passion One', cursive;
+	font-size: 50px;
 	text-shadow: 2px 2px 2px black;
-	font-weight: 900;
 	color: #eeeeee;
+}
+@media only screen and (min-width: 535px) {
+	#banner h1 {
+		font-size: 60px;
+	}
 }
 @media only screen and (min-width: 1000px) {
 	#banner h1 {
-		font-size: 50px;
+		font-size: 80px;
 	}
 }
 #footer {
