--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -10,6 +10,7 @@ body {
 	position: fixed;
 	background-color: #BF0C2B;
 	width: 100%;
+	padding-top: 20px;
 	box-sizing: border-box;
 	z-index: 1;
 }
@@ -18,12 +19,14 @@ body {
 	color: white;
     font-size: 30px;
 	float: left;
-	margin: 0 0px;
+	margin-bottom: 20px;
+	margin-left: 20px;
 }
 #hamburger-button {
 	float: right;
 	padding: 3px;
-	margin: 1px 0px;
+	margin-top: 1px;
+	margin-right: 20px;
 }
 #hamburger-button div {
 	width: 30px;
@@ -38,6 +41,7 @@ body {
 	position: relative;
 	float: right;
 	padding: 3px;
+	margin-right: 20px;
 	height: 22px;
 	top: 1px;
 	display: none;
@@ -87,7 +91,6 @@ body {
 	color: white;
     font-size: 30px;
 	float: left;
-	margin: 0 0px;
 	transition: 0.3s;
 }
 .header-button:before {
@@ -109,7 +112,11 @@ body {
 		display: none;
 	}
 	#header-menu {
+		margin-right: 20px;
 		display: block;
+	}
+	.header-button {
+		margin-left: 30px;
 	}
 	.header-button:hover:before {
 		visibility: visible;
