--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -112,11 +112,10 @@ body {
 		display: none;
 	}
 	#header-menu {
-		margin-right: 20px;
 		display: block;
 	}
 	.header-button {
-		margin-left: 30px;
+		padding: 0 15px;
 	}
 	.header-button:hover:before {
 		visibility: visible;
