--- a/Project/css/header-footer.css
+++ b/Project/css/header-footer.css
@@ -1,5 +1,6 @@
 #header {
 	position: fixed;
+	font-family: 'Kosugi Maru', sans-serif;
 	background-color: #BF0C2B;
 	width: 100%;
 	padding-top: 20px;
@@ -107,7 +108,11 @@
 		display: block;
 	}
 	.header-button {
+		margin: 0 15px;
+	}
+	#hamburger-button:target ~ #header-menu > .header-button {
 		padding: 0 15px;
+		margin: 0;
 	}
 	.header-button:hover:before {
 		visibility: visible;
@@ -116,6 +121,7 @@
 	}
 }
 #footer {
+	font-family: 'Kosugi Maru', sans-serif;
 	background-color: #BF0C2B;
 	text-align: center;
 	font-size: 20px;
