--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -4,7 +4,7 @@ html {
 body {
 	background-color: #111111;
     color:white;
-	font-family: 'Kosugi Maru', sans-serif;
+	font-family: sans-serif;
 }
 #banner {
 	position: relative;
@@ -19,6 +19,8 @@ body {
 	left: 10%;
 	transform: translate(-10%, -50%);
 	-webkit-transform: translate(-10%, -50%);
+	filter: blur(3px);
+	-webkit-filter: blur(3px);
 }
 @media only screen and (min-width: 1920px) {
 	#banner img {
@@ -72,4 +74,106 @@ body {
     #banner p{
         font-size: 50px;
     }
+}
+#new-items {
+	padding-top: 170px;
+	padding-bottom: 170px;
+}
+.title {
+	position: relative;
+	display: inline-block;
+	font-size: 45px;
+	left: 50%;
+	transform: translateX(-50%);
+	margin-bottom: 90px;
+	font-weight: 700;
+}
+.title:before {
+	position: absolute;
+	content: "";
+	width: 50%;
+	left: 50%;
+	bottom: -10px;
+	transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
+	border-bottom: solid 2px #F5900E;
+}
+.grid-container{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+	grid-gap: 100px;
+	width: 80%;
+	margin: auto;
+}
+.grid-item div {
+	width: 80%;
+	float: left;
+	font-size: 20px;
+}
+.grid-item h2{
+	font-weight: 900;
+	margin-bottom: 10px;
+}
+.price {
+	position: relative;
+	float: left;
+	border-bottom: solid 2px #F5900E;
+	font-weight: 700;
+}
+@media only screen and (min-width: 950px) {
+	.grid-container{
+		grid-template-columns: repeat(2, 1fr);
+		width: 60%;
+	}
+}
+#contact {
+	position: relative;
+	width: 100%;
+	height: 600px;
+	overflow: hidden;
+}
+#contact img {
+	position: absolute;
+	width: 100%;
+	top: 50%;
+	transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+	opacity: 0.5;
+	filter: blur(5px);
+	-webkit-filter: blur(5px);
+}
+#contact div {
+	position: absolute;
+	width: 35%;
+	padding: 60px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
+	background-color: #111111;
+	opacity: 0.7;
+}
+#contact h1 {
+	position: relative;
+	display: inline-block;
+	left: 50%;
+	transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
+	font-size: 45px;
+	margin-bottom: 30px;
+}
+#contact h1:before {
+	position: absolute;
+	content: "";
+	width: 50%;
+	left: 50%;
+	bottom: -10px;
+	transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
+	border-bottom: solid 2px #F5900E;
+}
+#contact p {
+	text-align: center;
+	font-size: 25px;
+	margin: 40px;
 }
