--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -75,9 +75,55 @@ body {
         font-size: 50px;
     }
 }
-#new-items {
+#news {
 	padding-top: 170px;
 	padding-bottom: 170px;
+}
+#veg {
+	position: relative;
+	width: 60%;
+	height: 500px;
+	overflow: hidden;
+	margin: auto;
+}
+#veg img{
+	position: absolute;
+	width: 100%;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
+	opacity: 0.6;
+}
+#veg p {
+	position: relative;
+	top: 40%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
+	text-align: center;
+	font-size: 50px;
+	text-shadow: 2px 2px 2px black;
+}
+#veg a {
+	position: absolute;
+	top: 60%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
+	text-align: center;
+	font-size: 25px;
+	color: white;
+	text-decoration: none;
+	text-shadow: 2px 2px 2px black;
+	background-color: #BF0C2B;
+	padding: 15px;
+	border: solid 6px #BF0C2B;
+	border-radius: 5px;
+	transition: 0.5s;
+}
+#veg a:hover {
+	background-color: #BF0C2B00;
 }
 .title {
 	position: relative;
@@ -85,6 +131,7 @@ body {
 	font-size: 45px;
 	left: 50%;
 	transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
 	margin-bottom: 90px;
 	font-weight: 700;
 }
@@ -126,13 +173,13 @@ body {
 		width: 60%;
 	}
 }
-#contact {
+#order {
 	position: relative;
 	width: 100%;
 	height: 600px;
 	overflow: hidden;
 }
-#contact img {
+#order img {
 	position: absolute;
 	width: 100%;
 	top: 50%;
@@ -142,10 +189,10 @@ body {
 	filter: blur(5px);
 	-webkit-filter: blur(5px);
 }
-#contact div {
+#order div {
 	position: absolute;
 	width: 35%;
-	padding: 60px;
+	height: 350px;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
@@ -153,16 +200,17 @@ body {
 	background-color: #111111;
 	opacity: 0.7;
 }
-#contact h1 {
+#order h1 {
 	position: relative;
 	display: inline-block;
 	left: 50%;
 	transform: translateX(-50%);
 	-webkit-transform: translateX(-50%);
 	font-size: 45px;
+	margin-top: 190px;
 	margin-bottom: 30px;
 }
-#contact h1:before {
+#order h1:before {
 	position: absolute;
 	content: "";
 	width: 50%;
@@ -172,7 +220,8 @@ body {
 	-webkit-transform: translateX(-50%);
 	border-bottom: solid 2px #F5900E;
 }
-#contact p {
+#order p {
+	position: relative;
 	text-align: center;
 	font-size: 25px;
 	margin: 40px;
