--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -56,7 +56,31 @@ body {
 	text-shadow: 2px 2px 2px black;
 	color: #eeeeee; 
 }
-
+#menus {
+	position: relative;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	top: 70%;
+}
+#menus a {
+	position: relative;
+	text-align: center;
+	font-size: 15px;
+	color: white;
+	text-decoration: none;
+	text-shadow: 2px 2px 2px black;
+	background-color: #BF0C2B;
+	padding: 5px;
+	border: solid 6px #BF0C2B;
+	border-radius: 5px;
+	margin: 6px;
+	transition: 0.5s;
+}
+#menus a:hover {
+	background-color: #BF0C2B00;
+}
 @media only screen and (min-width: 535px) {
 	#banner h1 {
 		font-size: 60px;
@@ -65,6 +89,10 @@ body {
     #banner p{
         font-size: 40px;
     }
+	#menus a {
+		font-size: 18px;
+		padding: 10px;
+	}
     
 }
 @media only screen and (min-width: 1000px) {
@@ -74,6 +102,10 @@ body {
     #banner p{
         font-size: 50px;
     }
+	#menus a {
+		font-size: 25px;
+		padding: 15px;
+	}
 }
 #news {
 	padding-top: 170px;
@@ -144,34 +176,6 @@ body {
 	transform: translateX(-50%);
 	-webkit-transform: translateX(-50%);
 	border-bottom: solid 2px #F5900E;
-}
-.grid-container{
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-	grid-gap: 100px;
-	width: 80%;
-	margin: auto;
-}
-.grid-item div {
-	width: 80%;
-	float: left;
-	font-size: 20px;
-}
-.grid-item h2{
-	font-weight: 900;
-	margin-bottom: 10px;
-}
-.price {
-	position: relative;
-	float: left;
-	border-bottom: solid 2px #F5900E;
-	font-weight: 700;
-}
-@media only screen and (min-width: 950px) {
-	.grid-container{
-		grid-template-columns: repeat(2, 1fr);
-		width: 60%;
-	}
 }
 #order {
 	position: relative;
