Main page is done
Many changes to the menu-pages

Co-Authored-By: Henrik <mcflyboy@users.noreply.github.com>

--- a/Project/css/menu.css
+++ b/Project/css/menu.css
@@ -10,6 +10,42 @@ body {
 	position: relative;
 	top: 200px;
 }
+#menus {
+	display: flex;
+	margin-bottom: 170px;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+}
+#menus a {
+	position: relative;
+	text-align: center;
+	font-size: 15px;
+	color: white;
+	text-decoration: none;
+	text-shadow: 2px 2px 2px black;
+	background-color: #BF0C2B;
+	padding: 5px;
+	border: solid 6px #BF0C2B;
+	border-radius: 5px;
+	margin: 10px;
+	transition: 0.5s;
+}
+#menus a:hover {
+	background-color: #BF0C2B00;
+}
+@media only screen and (min-width: 535px) {
+	#menus a {
+		font-size: 18px;
+		padding: 10px;
+	}
+}
+@media only screen and (min-width: 1000px) {
+	#menus a {
+		font-size: 25px;
+		padding: 15px;
+	}
+}
 .menu {
 	border-bottom: solid 2px #BF0C2B;
 	margin-bottom: 85px;
@@ -68,5 +104,38 @@ body {
 	}
 }
 .vegetarian {
+	position: relative;
+}
+.vegetarian:before {
+	position: absolute;
+	top: -22px;
+	font-size: 18px;
+	content: "Vegetar!";
 	color: green;
+}
+.best {
+	position: relative;
+}
+.best:before {
+	position: absolute;
+	top: -22px;
+	font-size: 18px;
+	content: "Bestselger!";
+	color: #F5900E;
+}
+@media only screen and (min-width: 520px) {
+	.vegetarian:before {
+		left: -60px;
+		top: -15px;
+		font-size: 20px;
+		transform: rotateZ(-25deg) scale(0.8);
+		-webkit-transform: rotateZ(-25deg) scale(0.8);
+	}
+	.best:before {
+		left: -60px;
+		top: -20px;
+		font-size: 20px;
+		transform: rotateZ(-25deg) scale(0.8);
+		-webkit-transform: rotateZ(-25deg) scale(0.8);
+	}
 }
