--- a/Project/css/header-footer.css
+++ b/Project/css/header-footer.css
@@ -1,13 +1,15 @@
-#header {
+/* The visible header-area */
+header {
 	position: fixed;
 	font-family: 'Kosugi Maru', sans-serif;
 	background-color: #BF0C2B;
 	width: 100%;
 	padding-top: 20px;
-	border-bottom: solid 3px #111111;
 	box-sizing: border-box;
 	z-index: 1;
 }
+
+/* The clickable title to the left in the header */
 #name {
 	text-decoration: none;
 	color: white;
@@ -16,21 +18,28 @@
 	margin-bottom: 20px;
 	margin-left: 20px;
 }
+
 #hamburger-button {
 	float: right;
 	padding: 3px;
 	margin-top: 1px;
 	margin-right: 20px;
 }
+
+/* Hamburger-part */
 #hamburger-button div {
 	width: 30px;
 	height: 4px;
 	background-color: white;
 	border-radius: 5px;
 }
+
+/* The middle part of the hamburger */
 #hamburger-middle {
 	margin: 5px 0;
 }
+
+/* X-button is only visible after clicking the hamburger-button */
 #x-button {
 	position: relative;
 	float: right;
@@ -40,6 +49,8 @@
 	top: 1px;
 	display: none;
 }
+
+/* The two lines that forms the X-button */
 #line-1 {
 	transform: rotate(-45deg) translate(-5px, 7px);
 	-webkit-transform: rotate(-45deg) translate(-5px, 7px);
@@ -48,22 +59,33 @@
 	transform: rotate(45deg) translate(5px, 2px);
 	-webkit-transform: rotate(45deg) translate(5px, 2px);
 }
+
+/* Default styling for the two lines that forms the X-button */
 #x-button div {
 	width: 30px;
 	height: 4px;
 	background-color: white;
 	border-radius: 5px;
 }
+
+/* The header items that is either displayed to the right in the header or in a
+drop-down list below the header displayed by clicking the hamburger-button */
 #header-menu {
 	display: none;
 	float: right;
 }
+
+/* Hamburger-button disappears after being clicked */
 #hamburger-button:target {
 	display: none;
 }
+
+/* X-button appears after clicking the hamburger-button */
 #hamburger-button:target + #x-button{
 	display: block;
 }
+
+/* Header menu-items shows up in dropdown-list after clicking the hamburger-button */
 #hamburger-button:target ~ #header-menu {
 	display: block;
 	float: none;
@@ -76,9 +98,13 @@
 	border-bottom: solid 1px #444444;
 	text-align: center;
 }
+
+/* Menu-item lights up when being clicked/pressed */
 #hamburger-button:target ~ #header-menu > .header-button:active {
 	background-color: #333333;
 }
+
+/* Styling for header menu-items */
 .header-button {
 	position: relative;
 	text-decoration: none;
@@ -87,6 +113,8 @@
 	float: left;
 	transition: 0.3s;
 }
+
+/* Animatable underline for menu-items */
 .header-button:before {
 	content: "";
 	position: absolute;
@@ -101,6 +129,8 @@
 	transition: 0.3s ease-in-out;
 	-webkit-transition: 0.3s ease-in-out;
 }
+
+/* Hamburger-button disappears and menu-items are displayed when the viewport is wider than 850px */
 @media only screen and (min-width: 850px) {
 	#hamburger-button {
 		display: none;
@@ -121,6 +151,8 @@
 		-webkit-transform: scaleX(1);
 	}
 }
+
+/* The visible footer-area */
 #footer {
 	font-family: 'Kosugi Maru', sans-serif;
 	background-color: #BF0C2B;
