--- a/Project/css/menu.css
+++ b/Project/css/menu.css
@@ -1,6 +1,3 @@
-html {
-	scroll-behavior: smooth;
-}
 body {
 	background-color: #111111;
     color:white;
@@ -8,11 +5,13 @@ body {
 }
 #content {
 	position: relative;
-	top: 200px;
+	top: 150px;
 }
+
+/* Buttons that takes the user to different menu-pages */
 #menus {
 	display: flex;
-	margin-bottom: 170px;
+	margin-bottom: 100px;
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
@@ -31,6 +30,8 @@ body {
 	margin: 10px;
 	transition: 0.5s;
 }
+
+/* Menu-button-background becomes transparent when hovered over */
 #menus a:hover {
 	background-color: #BF0C2B00;
 }
@@ -46,16 +47,74 @@ body {
 		padding: 15px;
 	}
 }
+
+/* Advertisement */
+#offer {
+	position: relative;
+	width: 80%;
+	height: 100px;
+	margin: auto;
+	overflow: hidden;
+	margin-bottom: 100px;
+}
+#offer img {
+	position: absolute;
+	top: 50%;
+	transform: translateY(0%, -50%);
+	-webkit-transform: translateY(-50%);
+}
+#offer p {
+	position: absolute;
+	top: 50%;
+	left: 5%;
+	transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+	font-size: 20px;
+	font-weight: 100;
+	font-family: 'Passion One';
+	text-shadow: 2px 2px 2px #004400;
+}
+
+/* Resize */
+@media only screen and (min-width: 500px) {
+	#offer {
+		height: 150px;
+	}
+	#offer p {
+		font-size: 30px;
+		font-weight: 300;
+	}
+}
+@media only screen and (min-width: 860px) {
+	#offer {
+		height: 200px;
+	}
+	#offer img {
+		left: 80%;
+		transform: translate(-80%, -50%);
+		-webkit-transform: translate(-80%, -50%);
+	}
+	#offer p {
+		font-size: 50px;
+		font-weight: 900;
+		text-shadow: 2px 2px 10px #004400;
+	}
+}
+
+/* Spaces up menus and puts a line between them */
 .menu {
 	border-bottom: solid 2px #BF0C2B;
 	margin-bottom: 85px;
 	padding-bottom: 85px;
 }
+
+/* Removes the line if it's the last menu */
 #end {
 	border-bottom: none;
 	margin-bottom: 170px;
 	padding-bottom: 0;
 }
+
 .title {
 	position: relative;
 	display: inline-block;
@@ -75,6 +134,8 @@ body {
 	-webkit-transform: translateX(-50%);
 	border-bottom: solid 2px #F5900E;
 }
+
+/* Menus are structured in grids */
 .grid-container{
     display: grid;
     grid-template-columns: repeat(1, 1fr);
@@ -103,6 +164,8 @@ body {
 		width: 60%;
 	}
 }
+
+/* Marks a dish as vegetarian */
 .vegetarian {
 	position: relative;
 }
@@ -113,6 +176,8 @@ body {
 	content: "Vegetar!";
 	color: green;
 }
+
+/* Marks the bestselling dish */
 .best {
 	position: relative;
 }
@@ -123,6 +188,8 @@ body {
 	content: "Bestselger!";
 	color: #F5900E;
 }
+
+/* Moves markers and resizes */
 @media only screen and (min-width: 520px) {
 	.vegetarian:before {
 		left: -60px;
