--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -1,6 +1,8 @@
+/* Smooth auto-scrolling */
 html {
 	scroll-behavior: smooth;
 }
+
 body {
 	background-color: #111111;
     color:white;
@@ -12,6 +14,8 @@ body {
 	height: 100vh;
 	overflow: hidden;
 }
+
+/* Image is stretched to always fill up the banner-space */
 #banner img {
 	position: absolute;
 	opacity: 0.5;
@@ -32,6 +36,7 @@ body {
 		height: 100%;
 	}
 }
+
 #banner h1 {
 	position: absolute;
 	top: 50%;
@@ -56,6 +61,8 @@ body {
 	text-shadow: 2px 2px 2px black;
 	color: #eeeeee; 
 }
+
+/* Buttons on the banner that takes the user to menu-pages */
 #menus {
 	position: relative;
 	display: flex;
@@ -78,13 +85,16 @@ body {
 	margin: 6px;
 	transition: 0.5s;
 }
+
+/* The background of buttons become transparent */
 #menus a:hover {
 	background-color: #BF0C2B00;
 }
+
+/* Changes the size of banner-content */
 @media only screen and (min-width: 535px) {
 	#banner h1 {
 		font-size: 60px;
-        
 	}
     #banner p{
         font-size: 40px;
@@ -107,6 +117,8 @@ body {
 		padding: 15px;
 	}
 }
+
+/* News-section */
 #news {
 	padding-top: 170px;
 	padding-bottom: 270px;
@@ -132,6 +144,8 @@ body {
 	-webkit-transform: translateX(-50%);
 	border-bottom: solid 2px #F5900E;
 }
+
+/* News article */
 #veg {
 	position: relative;
 	width: 80%;
@@ -168,6 +182,8 @@ body {
 	font-size: 20px;
 	text-shadow: 2px 2px 2px black;
 }
+
+/* Resizing of article */
 @media only screen and (min-width: 550px) {
 	#veg h1 {
 		font-size: 50px;
@@ -182,6 +198,8 @@ body {
 		width: 100%;
 	}
 }
+
+/* Order-section */
 #order {
 	position: relative;
 	width: 100%;
@@ -199,6 +217,8 @@ body {
 	filter: blur(4px);
 	-webkit-filter: blur(4px);
 }
+
+/* Resizing of frame */
 @media only screen and (min-width: 900px) {
 	#order img {
 		height: auto;
@@ -216,11 +236,14 @@ body {
 	background-color: #111111;
 	opacity: 0.7;
 }
+
+/* Resizing of frame */
 @media only screen and (min-width: 800px) {
 	#order div {
 		width: 40%;
 	}
 }
+
 #order h1 {
 	position: relative;
 	display: inline-block;
